<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="2000dp">

        <TextView
            android:id="@+id/vul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="Android Vulnerability Check"
            android:paddingLeft="24dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/apk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="50dp"
            android:text="@string/apkname"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/applabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apk"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/pack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/applabel"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/package_name"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pack_name"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/package_name"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:text="Version"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version"
            android:layout_marginTop="10dp"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>



        <TextView
            android:id="@+id/req_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version_name"
            android:text="Required Permissions"
            android:textStyle="bold"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>



        <TextView
            android:id="@+id/req_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/req_feature"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/path_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/req_permission"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/path_info"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path_info"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/and_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/req_version"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/andversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/and_version"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/installed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/andversion"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/installed"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/insdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/installed"
            android:paddingLeft="24dp"
            android:textSize="15dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/installed"
            android:text="Scan"
            android:layout_marginLeft="150dp"
            android:id="@+id/scan"/>

        <Button
            android:id="@+id/sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uninstall"
            android:paddingLeft="24dp"
            android:text="Scan app for Vulnerabilities" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scan"
            android:gravity="center"


            android:textSize="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Uninstall app"
            android:id="@+id/uninstall"
            android:layout_below="@+id/result"/>


        <TextView
            android:id="@+id/int_spoof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:paddingLeft="24dp"
            android:textSize="15dp" />





    </RelativeLayout>


</ScrollView>